# DynaLib

./: CMakeLists.txt  README.md
examples/: main.cpp  util.c  util.h
include/: dynalib.h
